chore: .env가 포함되도록 수정

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,7 +19,8 @@ jobs:
 
       - name: Create .env file
         run: |
-          echo "${{ secrets.ENV }}" > .env
+          mkdir -p jamovi/
+          echo "${{ secrets.ENV }}" > jamovi/.env
 
       - name: Build and tag Docker image
         run: |
