--- a/jamovi/package.json
+++ b/jamovi/package.json
@@ -16,6 +16,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "axios": "^1.7.9",
     "framer-motion": "^11.18.1",
     "lucide": "^0.474.0",
     "lucide-react": "^0.474.0",
